Arrumando a ordem do CSS

--- a/css/style.css
+++ b/css/style.css
@@ -29,12 +29,13 @@ img {
     padding: 0;
 }
 
+/* MENU/HEADER */
+
 a {
     text-decoration: none;
 }
 
 header {
-    /* margin-top: 0.4rem; */
     position: sticky;
     top: 0;
     background-color: #f5f5f5;
@@ -92,9 +93,10 @@ nav h2 a {
     color: #fffffa;
 }
 
+
 /* PÁGINA HOME */
 
-/* Destaque */
+/* DESTAQUE */
 #destaque-home {
     background: url(../imagens/dando-marmita.jpeg);
     background-position: center;
@@ -148,6 +150,7 @@ nav h2 a {
     color: #fffffa;
 }
 
+/* MÓDULO INSEGURANÇA */
 #container-inseguranca {
     background-color: #8C0303;
     color: #fffffa;
@@ -199,6 +202,7 @@ nav h2 a {
     margin-right: auto;
 }
 
+/* MÓDULO CONTEXTO */
 #container-contexto {
     margin: 19px auto;
     display: flex;
@@ -242,37 +246,15 @@ hr {
     height: 62px;
 }
 
-.rodape {
-    text-align: center;
-    padding-top: 0.7rem;
-    padding-bottom: 0.5rem;
-    max-height: 5vh;
-    margin-top: 30px;
-}
-
-.rodape img {
-    width: 40px;
-}
-
-.rodape p {
-    padding-bottom: 6px;
-}
-
-.limitador {
-    width: 95vw;
-    margin: auto;
-}
-
-/* Oq fazemos */
-.fundo-oq{
+/* PÁGINA O QUE FAZEMOS */
+/* DESTAQUE */
+.fundo-oq {
     background-image: url(../imagens/dando-pote2.jpg);
     padding: 150px 0;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
 }
-
-
 
 #main-oq-fazemos {
     padding-bottom: 40px;
@@ -287,10 +269,11 @@ hr {
 
 }
 
+/* CONTEÚDO */
 .oq-contein {
-
     object-fit: cover;
 }
+
 .texto-fazemos{
     text-align: center;
     margin-left: 30px;
@@ -307,23 +290,6 @@ hr {
     font-family: "Raleway", 'Courier New', Courier, monospace;
 }
 
-.aumento #sinal-mais {
-    font-size: 45px;
-    color: #8C0303;
-    font-weight: 700;
-
-}
-
-.aumento #milhoes {
-    font-size: 30px;
-    font-weight: 700;
-}
-
-.aumento p {
-    color: #8C0303;
-    font-weight: bold;
-}
-
 .fazemos-img1 img {
 
     height: 300px;
@@ -338,13 +304,64 @@ hr {
 
 }
 
-/* Contribução */
 
-/* Cartão interativo */
+/* CONTRIBUIÇÃO */
+/* CONFIGURAÇÃO GLOBAL DE TEXTO PARA MOBILE FIRST */
+#container-contribuicao p,
+#alinhamento-paragrafo-home p,
+#main-oq-fazemos p {
+    text-align: left;
+    margin-top: 22px;
+    line-height: 23px;
+}
+
+.espaco-texto h1 {
+    font-size: 1.8rem;
+    margin-top: 5px;
+}
+
+.espaco-texto {
+    max-width: 90%;
+    text-align: center;
+    margin-left: 1.7rem;
+
+}
+
+.espaco-texto h2 {
+    margin-top: 1.5rem;
+
+}
+
+.espaco-texto hr {
+    width: 110px;
+    margin: 0 auto;
+    margin-top: 0.7rem;
+}
+
+.alinhamento-flex h2, .alinhamento2-flex h2 {
+    color: #8C0303;
+}
+
+#container-contribuicao figure {
+    text-align: center;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+#contribuicao h2,
+#formas-de-pagamento h2 {
+    text-align: center;
+}
+
+input {
+    accent-color: #8C0303;
+}
+
+
+/* CARTÃO INTERATIVO */
 .container-cartao {
     margin: 0;
     padding: 0;
-    /* background-color: #f9f9f9; */
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -425,7 +442,7 @@ input {
     width: 60px;
 }
 
-/* CREDIT CARD IMAGE STYLING */
+/* ESTILIZAÇÃO DAS IMAGENS NO CARTÃO */
 .preload * {
     -webkit-transition: none !important;
     -moz-transition: none !important;
@@ -472,7 +489,7 @@ input {
     float: right;
 }
 
-/* CHANGEABLE CARD ELEMENTS */
+/* ELEMENTOS DE MUDANÇA DE COR DOS CARTÕES */
 .creditcard .lightcolor,
 .creditcard .darkcolor {
     -webkit-transition: fill .5s;
@@ -482,51 +499,39 @@ input {
 .creditcard .lightblue {
     fill: #03A9F4;
 }
-
 .creditcard .lightbluedark {
     fill: #0288D1;
 }
-
 .creditcard .red {
     fill: #ef5350;
 }
-
 .creditcard .reddark {
     fill: #d32f2f;
 }
-
 .creditcard .purple {
     fill: #ab47bc;
 }
-
 .creditcard .purpledark {
     fill: #7b1fa2;
 }
-
 .creditcard .cyan {
     fill: #26c6da;
 }
-
 .creditcard .cyandark {
     fill: #0097a7;
 }
-
 .creditcard .green {
     fill: #66bb6a;
 }
-
 .creditcard .greendark {
     fill: #388e3c;
 }
-
 .creditcard .lime {
     fill: #d4e157;
 }
-
 .creditcard .limedark {
     fill: #afb42b;
 }
-
 .creditcard .yellow {
     fill: #F2B705;
 }
@@ -534,137 +539,109 @@ input {
 .creditcard .yellowdark {
     fill: #f9a825;
 }
-
 .creditcard .orange {
     fill: #ff9800;
 }
-
 .creditcard .orangedark {
     fill: #ef6c00;
 }
-
 .creditcard .grey {
     fill: #bdbdbd;
 }
-
 .creditcard .greydark {
     fill: #616161;
 }
 
-/* FRONT OF CARD */
+/* PARTE DA FRENTE DO CARTÃO */
 #svgname {
     text-transform: uppercase;
 }
-
 #cardfront .st2 {
     fill: #FFFFFF;
 }
-
 #cardfront .st3 {
     font-family: 'Source Code Pro', monospace;
     font-weight: 600;
 }
-
 #cardfront .st4 {
     font-size: 54.7817px;
 }
-
 #cardfront .st5 {
     font-family: 'Source Code Pro', monospace;
     font-weight: 400;
 }
-
 #cardfront .st6 {
     font-size: 33.1112px;
 }
-
 #cardfront .st7 {
     opacity: 0.6;
     fill: #FFFFFF;
 }
-
 #cardfront .st8 {
     font-size: 24px;
 }
-
 #cardfront .st9 {
     font-size: 36.5498px;
 }
-
 #cardfront .st10 {
     font-family: 'Source Code Pro', monospace;
     font-weight: 300;
 }
-
 #cardfront .st11 {
     font-size: 16.1716px;
 }
-
 #cardfront .st12 {
     fill: #4C4C4C;
 }
 
-/* BACK OF CARD */
+/* PARTE DE TRÁS DO CARTÃO */
 #cardback .st0 {
     fill: none;
     stroke: #0F0F0F;
     stroke-miterlimit: 10;
 }
-
 #cardback .st2 {
     fill: #111111;
 }
-
 #cardback .st3 {
     fill: #F2F2F2;
 }
-
 #cardback .st4 {
     fill: #D8D2DB;
 }
-
 #cardback .st5 {
     fill: #C4C4C4;
 }
-
 #cardback .st6 {
     font-family: 'Source Code Pro', monospace;
     font-weight: 400;
 }
-
 #cardback .st7 {
     font-size: 27px;
 }
-
 #cardback .st8 {
     opacity: 0.6;
 }
-
 #cardback .st9 {
     fill: #FFFFFF;
 }
-
 #cardback .st10 {
     font-size: 24px;
 }
-
 #cardback .st11 {
     fill: #EAEAEA;
 }
-
 #cardback .st12 {
     font-family: 'Rock Salt', cursive;
 }
-
 #cardback .st13 {
     font-size: 37.769px;
 }
 
-/* FLIP ANIMATION */
+/* ANIMAÇÃO FLIP */
 .container {
     perspective: 1000px;
 }
-
 .creditcard {
     width: 100%;
     max-width: 400px;
@@ -714,8 +691,7 @@ input {
     text-decoration: none;
 }
 
-/* Botões animados */
-
+/* BOTÕES GLOBAIS ANIMADOS*/
 
 #destaque-home button,
 #container-confirmar button {
@@ -818,7 +794,7 @@ input {
     color: white;
 }
 
-
+/* ANIMAÇÃO HOVER DOS BOTÕES */
 @keyframes move {
     0% {
         transform: translateX(0);
@@ -847,119 +823,64 @@ input {
     }
 }
 
+/* CONTATO */
 
-
-
-#container-contribuicao p,
-#alinhamento-paragrafo-home p,
-#main-oq-fazemos p {
-    text-align: left;
-    margin-top: 22px;
-    line-height: 23px;
-}
-
-.espaco-texto h1 {
-    font-size: 1.8rem;
-    margin-top: 5px;
-}
-
-.espaco-texto {
-    max-width: 90%;
+.contato-main h2 {
     text-align: center;
-    margin-left: 1.7rem;
-
+    text-transform: inherit;
 }
 
-
-.espaco-texto h2 {
-    margin-top: 1.5rem;
-
+.container-contato {
+    max-width: 100%;
 }
 
-.espaco-texto hr {
-
-    width: 110px;
-    margin: 0 auto;
-    margin-top: 0.7rem;
-}
-
-.alinhamento-flex h2, .alinhamento2-flex h2 {
-    color: #8C0303;
-}
-
-#container-contribuicao figure {
-    /* Atenção */
-    text-align: center;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-}
-
-#contribuicao h2,
-#formas-de-pagamento h2 {
-    text-align: center;
-}
-
-/* #container-selecao {
-    margin-top: 15px;
-    margin-bottom: 15px;
+.contato-figura {
     display: flex;
-    justify-content: center;
-    gap: 5px;
-    flex-wrap: wrap;
-} */
+    justify-content: space-around;
 
-input {
-    accent-color: #8C0303;
 }
 
-/* #container-selecao label {
-    background-color: #F28705;
-    color: #fffffa;
-    font-family: "raleway",'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 20px;
+.nome {
     display: flex;
-    flex-direction: column;
+    justify-content: space-around;
     align-items: center;
-    border-radius: 26px;
-    height: 8rem;
-    width: 10rem;
-    margin: 5px 3px;
+    font-family: "Fira Sans";
+    margin: 3px 0 3px 5px;
+
 }
 
-#container-selecao .caixas .inputs {
-    max-width: 90%;
-    padding: 5px;
-    border: 0;
-    background-color: #F28705;
-    border-bottom: 2px solid white;
-    outline: 0;
-} */
-
-#container-selecao .caixas textarea::placeholder {
-    color: #fffffa;
-    font-family: "fira sans", 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+.email {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
-#container-selecao .caixas textarea {
-    border: none;
-    border-bottom: white 1px solid;
+.email img {
+    width: 27px;
 }
 
-#container-selecao input {
-    margin: 1.3rem;
-    width: 20px;
-    height: 20px;
+a {
+    color: black;
 }
 
-#container-selecao form {
-    margin-top: 18px;
-    font-size: 12px;
-    line-height: 3rem;
-    text-align: center;
-    max-width: 150px;
+a:hover {
+    color: rgb(25, 25, 155);
 }
 
-/* Formulário/ Contribuição*/
+.duvida {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+form {
+    margin: 1rem;
+}
+
+.forme {
+    margin-top: 20px;
+}
+
+/* FORMULÁRIO */
 
 .container-formularios {
     display: flex;
@@ -1029,102 +950,7 @@ select:focus {
     outline: 0;
 }
 
-/* Formas de pagamento */
-#container-formas:not(button) {
-    margin-top: 15px;
-    margin-bottom: 15px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 10px;
-}
-
-#container-formas label {
-    background-color: #8C0303;
-    color: #fffffa;
-    text-transform: uppercase;
-    font-family: "raleway", 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    border-radius: 23px;
-    display: flex;
-    align-items: center;
-    gap: 30px;
-    width: 392px;
-    height: 56px;
-}
-
-#container-formas input {
-    width: 40px;
-}
-
-#container-formas button {
-    background-color: #8C0303;
-    color: #fffffa;
-    font-family: "raleway", 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    border-radius: 15px;
-    text-transform: uppercase;
-    padding: 10px 15px;
-    cursor: pointer;
-}
-
-/* Contato vinicius */
-
-.contato-main h2 {
-    text-align: center;
-    text-transform: inherit;
-}
-
-.container-contato {
-    max-width: 100%;
-}
-
-.contato-figura {
-    display: flex;
-    justify-content: space-around;
-
-}
-
-.nome {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    font-family: "Fira Sans";
-    margin: 3px 0 3px 5px;
-
-}
-
-.email {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.email img {
-    width: 27px;
-}
-
-a {
-    color: black;
-}
-
-a:hover {
-    color: rgb(25, 25, 155);
-}
-
-.duvida {
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
-
-form {
-    margin: 1rem;
-}
-
-.forme {
-    margin-top: 20px;
-}
-
 /* LOGIN */
-
 #form-login button,
 .nao-autorizado a,
 .doadores h2 span {
@@ -1136,6 +962,28 @@ form {
     color: white;
 }
 
+
+/* FOOTER */
+.rodape {
+    text-align: center;
+    padding-top: 0.7rem;
+    padding-bottom: 0.5rem;
+    max-height: 5vh;
+    margin-top: 30px;
+}
+
+.rodape img {
+    width: 40px;
+}
+
+.rodape p {
+    padding-bottom: 6px;
+}
+
+.limitador {
+    width: 95vw;
+    margin: auto;
+}
 
 
 /* RESPONSIVIDADE */
