atualização de imagem.

--- a/css/style.css
+++ b/css/style.css
@@ -269,7 +269,7 @@ hr {
 /* PÁGINA O QUE FAZEMOS */
 /* DESTAQUE */
 .fundo-oq {
-    background-image: url(../imagens/dando-pote2.jpg);
+    background-image: url(../imagens/dando-pote.jpg);
     padding: 150px 0;
     background-size: cover;
     background-repeat: no-repeat;
